--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,8 @@
   background: url(https://images.pexels.com/photos/144428/pexels-photo-144428.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  padding-bottom:75px; 
+  height: 100%;
 }
 i{
   cursor: pointer;
